--- a/Squares/style.css
+++ b/Squares/style.css
@@ -5,15 +5,15 @@
 }
 
 body {
-    background: black;
+    background: grey;
     color: white;
 }
 
 #wrapper {
     display: flex;
     margin: 100px;
-    gap: 10px;
-    width: 600px;
+    gap: 50px;
+    width: 700px;
     flex-wrap: wrap;
     justify-content: center;
 }
