--- a/Citations/style.css
+++ b/Citations/style.css
@@ -8,12 +8,25 @@ body {
     min-height: 100vh;
     background: rgb(11, 11, 30);
     color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .quote {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
     background: rgb(111, 111, 111);
     height: 100px;
     margin: 15px;
+    padding: 30px;
     border-radius: 10px;
     border: 1px solid white;
+}
+
+.small {
+    align-self: flex-end;
 }
