--- a/Citations/style.css
+++ b/Citations/style.css
@@ -25,8 +25,29 @@ body {
     padding: 30px;
     border-radius: 10px;
     border: 1px solid white;
+    position: relative;
 }
 
 .small {
     align-self: flex-end;
 }
+
+.fa-heart {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    font-size: large;
+}
+
+.fa-solid {
+    display: none;
+    color:rgb(162, 7, 7);
+}
+
+.heartDisplay {
+    display: block;
+}
+
+/* .favourites {
+    background : red;
+} */
