--- a/Practice/BlackJack/index.css
+++ b/Practice/BlackJack/index.css
@@ -25,18 +25,19 @@ h1 {
     font-style: italic
 }
 
-#start {
+#start, #newCard {
     background: goldenrod;
     color: #016f32;
     font-weight: bold;
     border: none;
     border-radius: 2px;
     margin-top: 10px;
+    width: 175px;
     font-size: large;
     padding: 5px 15px 5px;
 }
 
-#start:hover {
+#start:hover, #newCard:hover {
     color: red;
     cursor: pointer;
 }
