--- a/Practice/Extension/style.css
+++ b/Practice/Extension/style.css
@@ -8,6 +8,7 @@
 body {
     background: black;
     color: white;
+    min-width: 400px;
 }
 
 #container {
@@ -28,4 +29,17 @@ button {
     color: white;
     font-weight: 700;
     border: none;
+}
+
+ul {
+    margin-top: 10px;
+    list-style: none;
+}
+
+li {
+    margin-top: 10px;
+}
+
+li a {
+    color: #5f9341;
 }
