--- a/Practice/Extension/style.css
+++ b/Practice/Extension/style.css
@@ -28,7 +28,12 @@ button {
     background: #5f9341;
     color: white;
     font-weight: 700;
-    border: none;
+    border: 1px solid #5f9341;
+}
+
+#delete-btn {
+    background: white;
+    color: #5f9341;
 }
 
 ul {
